[tool.poetry]
name = "deep-rl-learning"
version = "0.1.0"
description = "Working through https://huggingface.co/deep-rl-course"
authors = ["jamesowers-roo <james.owers@deliveroo.co.uk>"]
license = "MIT"
readme = "README.md"
packages = [{include = "deep_rl_learning"}]

[tool.poetry.dependencies]
python = "^3.10"
huggingface-hub = "^0.11.1"
jupyterlab = "^3.5.2"
jupyter-book = "^0.13.1"
lightning = "^1.8.6"
matplotlib = "^3.6.2"
numpy = "^1.24.1"
pandas = "^1.5.2"
scikit-learn = "^1.2.0"
seaborn = "^0.12.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
